# web3mcp

./: .gitignore  CHANGELOG.md  CLEANUP_DONE.txt  CLEANUP_SUMMARY.md  CONTRIBUTING.md  HACKATHON.md  README.md  ROADMAP.md  UPGRADE_SUMMARY.md
archive/: README.md
omniweb3-mcp/: .env.bsc-testnet  .env.example  .gitignore  BSC_CONTRACT_TEST_GUIDE.md  BSC_TESTNET.md  BSC_TESTNET_GUIDE.md  BSC_TEST_README.md  CLAUDE.md  CLAUDE_DESKTOP_SETUP.md  COMMIT_MESSAGE.txt  DEPENDENCIES.md  Dockerfile  Dockerfile.alt  MCP_APPS_STATUS.md  OFFICIAL_MCP_APPS_COMPLIANCE.md  QUICK_REFERENCE.md  QUICK_START_BSC.md  README.zig-0.16.md  README_TESTING.md  README_v0.2.md  RELEASE_NOTES.md  (+22 more)
sui-mcp/: .gitignore  Cargo.toml  README.md  build.rs  claude_desktop_config.example.json
sui-mcp/abi_registry/evm/84532/: erc20.example.json
sui-mcp/config/: cetus.example.json
sui-mcp/docs/: acp-executor-prompt.evm_call_2phase.md  acp-executor-prompt.md  acp-executor-prompt.sui_move_2phase.md  acp-integration.md  acp-main-agent-template.md  claude-prompts.md  intent-router.md  intent-router.zh.md
sui-mcp/examples/: dapps.json
sui-mcp/examples/acp/: README-main-agent.md  README.md  integration-repo-skeleton.md
sui-mcp/examples/acp/notes/: prompt-injection.md  rollout.md  security.md
sui-mcp/examples/acp/payloads/: evm_call_2phase_confirm.json  solana_idl_2phase_simulate.json  sui_move_2phase_plan.json  sui_move_2phase_simulate.json
sui-mcp/examples/mcp-http-bridge/: .env.example  README.md
sui-mcp/examples/zklogin-google/: .env.example  README.md  index.html
sui-mcp/examples/zklogin-prover-local/: .env.example  .gitignore  README.md
sui-mcp/src/: lib.rs  main.rs  move_auto_fill.rs  move_schema.rs  move_type_args.rs  router_prelude.rs  server.rs  types.rs  types_solana_idl_dynamic.rs
sui-mcp/src/intent/: adapters.rs
sui-mcp/src/sui/: dynamic_fields.rs  tx.rs
sui-mcp/src/tools/auth/keystore/: keystore.rs
sui-mcp/src/tools/auth/zklogin/: zklogin.rs
sui-mcp/src/tools/cetus/actions/: cetus_actions.rs
sui-mcp/src/tools/cetus/config/: cetus_config.rs
sui-mcp/src/tools/evm/: evm_tools.rs
sui-mcp/src/tools/graphql/core/: graphql_tools.rs
sui-mcp/src/tools/intent/: intent_helpers.rs  nl_intent.rs
sui-mcp/src/tools/move/automation/: move_auto.rs
sui-mcp/src/tools/move/dynamic/: dapp_manifest.rs  move_dynamic.rs
sui-mcp/src/tools/move/resolution/: move_resolve.rs  move_resolve_helpers.rs
sui-mcp/src/tools/move/schema/: move_schema.rs
sui-mcp/src/tools/read/balances/: read_balances.rs
sui-mcp/src/tools/solana/: solana_tools.rs
sui-mcp/src/tools/system/chain/: chain_info.rs
sui-mcp/src/tools/system/gas/: system_gas.rs
sui-mcp/src/tools/tx/pay/: tx_build.rs
sui-mcp/src/tools/tx/queries/: checkpoints.rs  coin_queries.rs  tx_queries.rs
sui-mcp/src/tools/tx/staking/: tx_stakes.rs
sui-mcp/src/utils/: audit.rs  base64.rs  evm_calldata.rs  evm_confirm_store.rs  evm_confirm_ux.rs  evm_selector.rs  json.rs  mod.rs  permit2_selectors.md  solana_confirm_store.rs  solana_idl.rs  solana_idl_arg_examples.rs  solana_idl_enum_hints.rs  sui_confirm_store.rs  sui_parse.rs  token_registry.rs
sui-mcp/tests/: evm_confirm_store_tests.rs
web3mcp/: Cargo.toml  README.md  README.rename-note.md  build.rs  claude_desktop_config.example.json
web3mcp/docs/: acp-executor-prompt.evm_call_2phase.md  acp-executor-prompt.md  acp-executor-prompt.sui_move_2phase.md  acp-integration.md  intent-router.zh.md  mvp-milestones.md  product-vision.md  troubleshooting.md  tx-tools.md  w3rt-public-api.md
web3mcp/docs/prompts/: beginner.md  mainnet-safe.md  solana-idl.md  troubleshooting.md
web3mcp/examples/acp/: README-main-agent.md  README.md  integration-repo-skeleton.md
web3mcp/examples/acp/notes/: rollout.md  security.md
web3mcp/examples/acp/payloads/: evm_call_2phase_plan.json  evm_call_2phase_send.json  evm_call_2phase_simulate.json  solana_idl_2phase_confirm.json  solana_idl_2phase_plan.json  solana_idl_2phase_send.json  sui_move_2phase_confirm.json  sui_move_2phase_send.json
web3mcp/examples/mcp-http-bridge/: README.md  package.json
web3mcp/examples/zklogin-google/: README.md  index.html  package.json
web3mcp/examples/zklogin-google/src/: style.css
web3mcp/examples/zklogin-prover-local/: docker-compose.yml
web3mcp/policies/: solana_confirm_policy.json
web3mcp/src/: lib.rs  main.rs  move_auto_fill.rs  move_schema.rs  move_type_args.rs  prompts.rs  router_prelude.rs  server.rs  tx_build_tests.rs  types.rs  types_solana_idl_dynamic.rs
web3mcp/src/sui/: dynamic_fields.rs  mod.rs  tx.rs
web3mcp/src/tools/auth/keystore/: keystore.rs
web3mcp/src/tools/crypto/signature/: crypto_tools.rs
web3mcp/src/tools/evm/: evm_tools.rs
web3mcp/src/tools/intent/: intent_helpers.rs  intent_parse_only.rs  nl_intent.rs
web3mcp/src/tools/intent/templates/: transaction_templates.rs
web3mcp/src/tools/move/automation/: move_auto.rs  move_auto_helpers.rs
web3mcp/src/tools/move/resolution/: move_resolve.rs  move_resolve_helpers.rs
web3mcp/src/tools/move/schema/: move_suggest.rs
web3mcp/src/tools/read/objects/: read_objects.rs
web3mcp/src/tools/read/transactions/: read_transactions.rs
web3mcp/src/tools/rpc/service/: rpc_tools.rs
web3mcp/src/tools/solana/: solana_public.rs  solana_tools.rs
web3mcp/src/tools/system/chain/: chain_info.rs
web3mcp/src/tools/system/coins/: coin_read.rs
web3mcp/src/tools/system/events/: system_events.rs
web3mcp/src/tools/system/stats/: system_stats.rs
web3mcp/src/tools/system/workflow/: system_workflow.rs
web3mcp/src/tools/tx/inspections/: tx_sim.rs
web3mcp/src/tools/tx/pay/: tx_build.rs
web3mcp/src/utils/: audit.rs  base64.rs  errors.rs  evm_calldata.rs  evm_chain_registry.rs  evm_confirm_store.rs  evm_decode.rs  evm_selector.rs  evm_tx_replace.rs  json.rs  mod.rs  network.rs  override_store.rs  run_store.rs  solana_confirm_store.rs  solana_idl.rs  solana_idl_arg_examples.rs  solana_idl_cache.rs  solana_idl_registry.rs  solana_policy.rs  sui_confirm_store.rs  sui_parse.rs  token_registry.rs
web3mcp/tests/: evm_confirm_store_tests.rs
(+710 files in other folders)
