[package]
name = "sui-mcp"
version = "0.1.0"
edition = "2021"

[dependencies]
rmcp = { version = "0.8", features = ["server", "transport-io", "macros"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "1.1"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.22"
bcs = "0.1.4"
fastcrypto-zkp = { git = "https://github.com/MystenLabs/fastcrypto", rev = "d2e2d13be3e550745739144e2a090b9675e4ffcb", package = "fastcrypto-zkp" }
sui-sdk = { git = "https://github.com/MystenLabs/sui", package = "sui-sdk" }
sui-types = { git = "https://github.com/MystenLabs/sui", package = "sui-types" }
sui-keys = { git = "https://github.com/MystenLabs/sui", package = "sui-keys" }
sui-json = { git = "https://github.com/MystenLabs/sui", package = "sui-json" }
sui-json-rpc-types = { git = "https://github.com/MystenLabs/sui", package = "sui-json-rpc-types" }
move-core-types = { git = "https://github.com/MystenLabs/sui", package = "move-core-types" }
shared-crypto = { git = "https://github.com/MystenLabs/sui", package = "shared-crypto" }

sui-graphql = { git = "https://github.com/MystenLabs/sui-rust-sdk", package = "sui-graphql" }
sui-rpc = { git = "https://github.com/MystenLabs/sui-rust-sdk", package = "sui-rpc" }
sui-crypto = { git = "https://github.com/MystenLabs/sui-rust-sdk", package = "sui-crypto", features = ["ed25519", "secp256k1", "secp256r1"] }
sui-sdk-types = { git = "https://github.com/MystenLabs/sui-rust-sdk", package = "sui-sdk-types", features = ["serde", "hash"] }
sui-transaction-builder = { git = "https://github.com/MystenLabs/sui-rust-sdk", package = "sui-transaction-builder" }

# EVM support (Base / EVM-compatible chains)
ethers = { version = "2", default-features = false, features = ["abigen", "rustls"] }
hex = "0.4"
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
urlencoding = "2.1"

# Solana support (IDL + RPC + signing)
solana-client = "3.1.8"
solana-sdk = "3.0.0"
solana-transaction-status = "3.1.8"
solana-compute-budget-interface = "3.0.0"
spl-token = { version = "9.0.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "8.0.0", features = ["no-entrypoint"] }
bs58 = "0.5"
solana-commitment-config = { version = "3.1.0", features = ["serde"] }
solana-rpc-client-api = "3.1.8"
solana-account-decoder = "3.1.8"
solana-program-pack = "3.0.0"
sha2 = "0.10"
bincode = "1.3"
spl-token-2022 = { version = "8.0.1", features = ["no-entrypoint"] }
solana-message = "3.0.1"
solana-transaction = "3.0.2"
solana-address-lookup-table-interface = "3.0.1"
carbon-jupiter-swap-decoder = "0.12.0"
carbon-core = "0.12.0"

[features]
# Reduce MCP tool list size for Claude Desktop by compiling without extra Solana helpers.
# Enable `--features solana-extended-tools` to include the full Solana RPC/SPL helper set.
solana-extended-tools = []

[dev-dependencies]
tempfile = "3"
